Fix typos on html

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if std.post_graduation %}{{ std.post_graduation.name }}{% endif %} (CCSA/UFRN)</title>
 
-    <meta name="description" content="Plataforma acadêmica dos programas de pós-graduação CCSA da UFRN."/>
+    <meta name="description" content="Plataforma acadêmica dos programas de pós-graduação do CCSA da UFRN."/>
     <meta name="author" content="Mazuh"/>
 
     <link rel="shortcut icon" href="https://www.ccsa.ufrn.br/portal/wp-content/uploads/2014/08/favicon.fw_.png"/>
@@ -30,7 +30,7 @@
                 {% if std.post_graduation %}
                 <a href="/{{ std.post_graduation.initials }}" class="navbar-brand">{{ std.post_graduation.initials }}</a>
                 {% else %}
-                <a href="/" class="navbar-brand">Pós-Graduações</a>
+                <a href="/" class="navbar-brand">Pós-Graduação</a>
                 {% endif %}
             </div>
 
