--- a/MinervaEnv/Minerva/templates/staffs_view.html
+++ b/MinervaEnv/Minerva/templates/staffs_view.html
@@ -35,8 +35,7 @@
     <p>
         O setor funciona no horário regular de
         <a href="{{ url_for('home', initials=std.post_graduation.initials) }}">atendimento</a>,
-        logo estando melhor disponível para auxiliar para professores e discentes.
-        Abaixo, os membros que a compõem.
+        logo estando melhor disponível para auxiliar professores e discentes.
     </p>
 
     <div class="panel panel-default">
