--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -51,8 +51,8 @@
                                 <span class="glyphicon glyphicon-blackboard"></span> Disciplinas</a>
                             </li>
                             
-                            <li><a href="{{ url_for('page_not_found') }}">
-                                <span class="glyphicon glyphicon-list-alt"></span> Discentes (em breve)</a>
+                            <li><a href="{{ url_for('view_students', initials=std.post_graduation.initials) }}">
+                                <span class="glyphicon glyphicon-list-alt"></span> Discentes</a>
                             </li>
                             
                             <li><a href="{{ url_for('view_professors', initials=std.post_graduation.initials) }}">
