#13 Specity whenever failedtoken is an error (auth or a connection)

--- a/MinervaEnv/Minerva/templates/501.html
+++ b/MinervaEnv/Minerva/templates/501.html
@@ -5,9 +5,8 @@
 <h2>501: Serviço indisponível devido a erro interno de autorização.</h2>
 <p>
     No momento, esta página está indisponível, porque tentou acessar algo e não conseguiu
-    provar sua identidade, talvez por um erro de conexão (503) ou outra falha desconhecida no
-    servidor (500). Volte mais tarde! Pode ser temporário, mas, por favor, contate os administradores do
-    sistema caso esse erro persista por muito tempo.
+    provar sua identidade. Volte mais tarde! Pode ser temporário, mas, por favor, contate os
+    administradores do sistema caso esse erro persista por muito tempo.
 </p>
 
 {% endblock %}
