#4 Print an error message if a mongod isnt active

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% if std.post_graduation %}{{ std.post_graduation.name }}{% endif %} (CCSA/UFRN)</title>
+    <title>{% if std.post_graduation %}{{ std.post_graduation.name }} {% else %} Pós-Graduação {% endif %} (CCSA/UFRN)</title>
 
     <meta name="description" content="Plataforma acadêmica dos programas de pós-graduação do CCSA da UFRN."/>
     <meta name="author" content="Mazuh"/>
