--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -86,8 +86,8 @@
                                 <span class="glyphicon glyphicon-knight"></span> Equipe</a>
                             </li>
                             
-                            <li><a href="{{ url_for('page_not_found') }}">
-                                <span class="glyphicon glyphicon-file"></span> Documentos (em breve)</a>
+                            <li><a href="{{ url_for('view_documents', initials=std.post_graduation.initials) }}">
+                                <span class="glyphicon glyphicon-file"></span> Documentos</a>
                             </li>
                             
                             <li><a href="{{ url_for('page_not_found') }}">
