--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -99,7 +99,7 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{ url_for('page_not_found') }}">
+                    <li><a href="https://ccsa.ufrn.br/portal/">
                         <span class="glyphicon glyphicon-arrow-left"></span> Portal do CCSA </a></li>
                     
                     <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
