--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -15,7 +15,7 @@
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <!--<li data-target="#myCarousel" data-slide-to="2"></li>-->
     </ol>
 
     <div class="carousel-inner" role="listbox">
@@ -30,23 +30,27 @@
                         <p>
                             Stricto sensu: o Mestrado Profissional em Gestão Pública prepara dirigentes para atuar em instituições governamentais.
                         </p>
-                        <p><a class="btn btn-lg btn-primary" href="{{ url_for('page_not_found') }}" role="button">Quem são os egressos? &raquo;</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="{{ url_for('view_subjects', initials=std.post_graduation.initials) }}" role="button">Conheça a grade curricular</a></p>
                     </div>
                 </div>
             </div>
         </div>
-<!--
+
         <div class="item">
-            <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+            <img class="second-slide" src="/static/assets/man_tie.jpg"
+            alt="Segundo quadro: homem de terno ajustando a gravata.">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>Another example headline.</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                    <div class="carousel-caption-content">
+                        <h1>Como ingressar?</h1>
+                        <p>O edital de inscrição abre normalmente após outubro, com vagas exclusivas para instituições com convênio com o Programa.</p>
+                        <p><a class="btn btn-lg btn-primary" href="{{ url_for('view_integrations', initials=std.post_graduation.initials) }}" role="button">Ver convênios</a></p>
+                    </div>
                 </div>
             </div>
         </div>
         
+<!--
         <div class="item">
             <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
             <div class="container">
@@ -57,9 +61,8 @@
                 </div>
             </div>
         </div>
--->
     </div>
-
+-->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Anterior</span>
