Add a blue color to all upper banners in each subpage

--- a/MinervaEnv/Minerva/static/css/ppgp.css
+++ b/MinervaEnv/Minerva/static/css/ppgp.css
@@ -11,3 +11,16 @@ section span,
     color: #063E5F;
 }
 
+.main-page-header{
+    background-color: #063E5F;
+    padding-bottom: 15px;
+    padding-top: 10px;
+}
+
+.main-page-header h1{
+    color: #ecf0f1;
+}
+
+.main-page-header h1 small{
+    color: #bdc3c7;
+}
