Spotlight covenants: a bottom banner on index

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -84,7 +84,7 @@
                             </li>
                             
                             <li><a href="{{ url_for('view_integrations', initials=std.post_graduation.initials) }}">
-                                <span class="glyphicon glyphicon-globe"></span> Eventos e Convênios</a>
+                                <span class="glyphicon glyphicon-globe"></span> Integrações: Eventos e Convênios</a>
                             </li>
                             
                             <li><a href="{{ url_for('page_not_found') }}">
@@ -141,7 +141,7 @@
 
     <footer>
         <div class="container">
-            <p class="pull-right">v0.0.2 (Pré-Lançamento)</p>
+            <p class="pull-right">v0.0.3 (Pré-Lançamento)</p>
             <p>&copy; 2017 - Projeto Minerva (Centro de Ciências Sociais Aplicadas, Universidade Federal do Rio Grande do Norte)</p>
             <p><a href="https://github.com/ccsa-ufrn/PosGraduacao" target="_blank">Código livre</a>, licenciado em GPL3.</p>
         </div>
