--- a/MinervaEnv/Minerva/static/css/carousel.css
+++ b/MinervaEnv/Minerva/static/css/carousel.css
@@ -51,3 +51,12 @@
         line-height: 1.4;
     }
 }
+
+/* STICK, the last carousel you will ever need
+-------------------------------------------------- */
+
+.autoplay > div img {
+    max-width: 200px;
+    height: auto;
+    max-height: 150px;
+}
