--- a/MinervaEnv/Minerva/templates/integrations_view.html
+++ b/MinervaEnv/Minerva/templates/integrations_view.html
@@ -12,7 +12,7 @@
 
 <section>
     <header class="page-header">
-        <h2>&raquo Eventos e Convênios</h2>
+        <h2>&raquo Integrações: Eventos e Convênios</h2>
     </header>
 
     <p>
