Clear useless plugin files

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -269,6 +269,6 @@
     });
 </script>
 
-<script type="text/javascript" src="/static/slick/slick.min.js"></script>
+<script type="text/javascript" src="/static/slick/slick.js"></script>
 
 {% endblock %}
