--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -147,7 +147,7 @@
         </div>
     </footer>
 
-    <script src="/static/jquery3/jquery-3.1.1.js"></script>
+    <script src="/static/jquery3/jquery-3.1.1.min.js"></script>
     <script src="/static/bootstrap3/js/bootstrap.js"></script>
     {% block scripts %}{% endblock %}
 
