--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -106,44 +106,80 @@
         </p>
     </section>
     
-    <section class="col-md-4">
-        <header>
-            <h2><span class="glyphicon glyphicon-pushpin"></span> Apresentações</h2>
-        </header>
-        <p>Apresentações públicas dos discentes diante de suas bancas examinadoras.</p>
-        <table class="schedule-table">
-            {% for report in final_reports %}
-            <tr class="schedule-container">
-                <td class="schedule-container-date">
-                    <ul>
-                        <li class="schedule-date-day">{{ report.time.strftime("%d") }}</li>
-                        <li class="schedule-date-month">{{ report.time.strftime("%b").upper() }}</li>
-                        <li class="schedule-date-year">{{ report.time.strftime("%Y") }}</li>
-                    </ul>
-                </td>
-                <td class="schedule-container-info">
-                    <h4>{{ report.title }}
-                        <br/>
-                        <small>{{ report.author }}</small>
-                    </h4>
-                    <p>
-                        Local: {{ report.location }}<br/>
-                        Horário: {{ report.time.strftime("%H:%M") }}<br/>
-                    </p>
-                </td>
-            </tr>
-            {% endfor %}
-        </table>
-        <!--<p><a class="btn btn-default center-block" href="{{ url_for('page_not_found') }}">Ver cronograma inteiro &raquo;</a></p>-->
-    </section>
+    <div class="col-md-4">
+        
+        <section>
+            <header>
+                <h2><span class="glyphicon glyphicon-pushpin"></span> Eventos</h2>
+            </header>
+            <p>Eventos anunciados pelo Programa.</p>
+            {% if events %}
+            <table class="schedule-table">
+                {% for event in events %}
+                <tr class="schedule-container">
+                    <td class="schedule-container-date">
+                        <ul>
+                            <li class="schedule-date-day">{{ event.time.strftime("%d") }}</li>
+                            <li class="schedule-date-month">{{ event.time.strftime("%b").upper() }}</li>
+                            <li class="schedule-date-year">{{ event.time.strftime("%Y") }}</li>
+                        </ul>
+                    </td>
+                    <td class="schedule-container-info">
+                        <h4>{{ event.title }}</h4>
+                        <p>
+                            Local: {{ event.location }}<br/>
+                            Horário: {{ event.time.strftime("%H:%M") }}<br/>
+                        </p>
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
+            {% else %}
+            <p><small>(Sem eventos agendados no momento.)</small></p>
+            {% endif %}
+        </section>
+
+        <section>
+            <header>
+                <h2><span class="glyphicon glyphicon-pushpin"></span> Apresentações</h2>
+            </header>
+            <p>Apresentações públicas dos discentes diante de suas bancas examinadoras.</p>
+            {% if final_reports %}
+            <table class="schedule-table">
+                {% for report in final_reports %}
+                <tr class="schedule-container">
+                    <td class="schedule-container-date">
+                        <ul>
+                            <li class="schedule-date-day">{{ report.time.strftime("%d") }}</li>
+                            <li class="schedule-date-month">{{ report.time.strftime("%b").upper() }}</li>
+                            <li class="schedule-date-year">{{ report.time.strftime("%Y") }}</li>
+                        </ul>
+                    </td>
+                    <td class="schedule-container-info">
+                        <h4>{{ report.title }}
+                            <br/>
+                            <small>{{ report.author }}</small>
+                        </h4>
+                        <p>
+                            Local: {{ report.location }}<br/>
+                            Horário: {{ report.time.strftime("%H:%M") }}<br/>
+                        </p>
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
+            {% else %}
+            <p><small>(Não há nenhuma apresentação do Programa agendada.)</small></p>
+            {% endif %}
+        </section>
+    </div>
     
-    <section class="col-md-4">
+    <div class="col-md-4">
         <section>
             <header>
             <h2><span class="glyphicon glyphicon-bullhorn"></span> Seleções</h2>
             </header>
-            <h4>Ops...</h4>
-            <p>Não há nenhuma seleção ocorrendo no momento.</p>
+            <p><small>(Não há seleções ocorrendo agora.)</small></p>
         </section>
         <!--
         <h4>Mestrado (15 vagas):
@@ -214,7 +250,7 @@
             </div>
             {% endfor %}
         </section>
-    </section>
+    </div>
 
 </div>
 
