--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -254,10 +254,21 @@
 
 </div>
 
+<div class="row darker-container">
+    <section>
+        <header>
+            <h2><span class="glyphicon glyphicon-home"></span> Sobre o Programa</h2>
+        </header>
+        <p>O Programa de Pós-Graduação em Gestão Pública (PPGP) da Universidade Federal do Rio Grande do Norte (UFRN), é parte integrante do Centro de Ciências Sociais Aplicadas (CCSA) e foi criado em 2010.</p>
+        <p>Atualmente oferece o curso de Mestrado Profissional em Gestão Pública, em nível de pós-graduação stricto sensu, com o intuito de preparar dirigentes de instituições públicas. O corpo docente do curso é formado pelos professores do Centro de Ciências Sociais Aplicadas (CCSA) da UFRN, além de contar com professores convidados e colaboradores.</p>
+        <p>O Curso é oferecido por meio de convênio com as instituições interessadas, que podem contatar a coordenação do curso para mais informações.</p>
+        <br/>
+        <p>Este site disponibiliza informações mais detalhadas sobre o Programa, inclusive informações de contato.</p>
+    </section>
+</div>
+
 <div class="row">
-    <h3>
-        Instituições em convênio:
-    </h3>
+    <h3>Instituições em convênio</h3>
     <p>
         <a href="{{ url_for('view_integrations', initials=std.post_graduation.initials) }}">Ler mais</a>
     </p>
