Create section for institutional quick links on layout footer

--- a/MinervaEnv/Minerva/static/css/general.css
+++ b/MinervaEnv/Minerva/static/css/general.css
@@ -116,12 +116,14 @@ footer{
     padding-bottom: 20px;
 }
 
-footer p{
+footer p,
+footer li,
+footer li a{
     color: #fff;
 }
 
-footer p a,
-footer p a:hover
-footer p a:visited{
+footer a,
+footer a:hover,
+footer a:visited{
     color: #bdc3c7;
 }
