--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -141,8 +141,20 @@
 
     <footer>
         <div class="container">
+            <p><span class="glyphicon glyphicon-link"></span> <strong>Links rápidos:</strong></p>
+            <ul id="institutional-quick-links">
+                <li><a target="_blank" href="http://ufrn.br/">UFRN: Universidade Federal do Rio Grande do Norte</a></li>
+                <li><a target="_blank" href="https://sigaa.ufrn.br/sigaa/public/home.jsf">SIGAA: Sistema Integrado de Gestão de Atividades Acadêmicas</a></li>
+                <li><a target="_blank" href="https://ccsa.ufrn.br/portal/">CCSA: Centro de Ciências Sociais Aplicadas</a></li>
+                <li><a target="_blank" href="http://www.capes.gov.br/">CAPES: Coordenação de Aperfeiçoamento de Pessoal de Nível Superior</a></li>
+                <li><a target="_blank" href="http://cnpq.br/">CNPq: Conselho Nacional de Desenvolvimento Científico e Tecnológico</a></li>
+                <li><a target="_blank" href="https://repositorio.ufrn.br/jspui/">RI: Repositório Institucional</a></li>
+            </ul>
+        </div>
+
+        <div class="container">
             <p class="pull-right">v0.0.3 (Pré-Lançamento)</p>
-            <p>&copy; 2017 - Projeto Minerva (Centro de Ciências Sociais Aplicadas, Universidade Federal do Rio Grande do Norte)</p>
+            <p><strong>&copy; 2017 - Projeto Minerva (Centro de Ciências Sociais Aplicadas, Universidade Federal do Rio Grande do Norte)</strong></p>
             <p><a href="https://github.com/ccsa-ufrn/PosGraduacao" target="_blank">Código livre</a>, licenciado em GPL3.</p>
         </div>
     </footer>
