--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -153,7 +153,7 @@
         </div>
 
         <div class="container">
-            <p class="pull-right">v0.0.3 (Pré-Lançamento)</p>
+            <p class="pull-right">v0.1.0</p>
             <p><strong>&copy; 2017 - Projeto Minerva (Centro de Ciências Sociais Aplicadas, Universidade Federal do Rio Grande do Norte)</strong></p>
             <p><a href="https://github.com/ccsa-ufrn/PosGraduacao" target="_blank">Código livre</a>, licenciado em GPL3.</p>
         </div>
