Link to university opened information portal

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -87,7 +87,7 @@
                                 <span class="glyphicon glyphicon-globe"></span> Convênios</a>
                             </li>
                             
-                            <li><a href="{{ url_for('page_not_found') }}">
+                            <li><a href="#">
                                 <span class="glyphicon glyphicon-calendar"></span> Calendário (em breve)</a>
                             </li>
                         </ul>
@@ -145,6 +145,9 @@
 
     <footer>
         <div class="container">
+            <a href="http://www.sistemas.ufrn.br/acessoainformacao/" target="_blank">
+                <img class="pull-right" src="/static/assets/icon-acessoainformacao.png"/>
+            </a>
             <p><span class="glyphicon glyphicon-link"></span> <strong>Links rápidos:</strong></p>
             <ul id="institutional-quick-links">
                 <li><a target="_blank" href="http://ufrn.br/">UFRN: Universidade Federal do Rio Grande do Norte</a></li>
