Create view for final projects

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -69,6 +69,10 @@
                             <li><a href="{{ url_for('view_participations', initials=std.post_graduation.initials) }}">
                                 <span class="glyphicon glyphicon-globe"></span> Participações em Eventos</a>
                             </li>
+
+                            <li><a href="{{ url_for('view_final_reports', initials=std.post_graduation.initials) }}">
+                                <span class="glyphicon glyphicon-folder-open"></span> Defesas e Dissertações</a>
+                            </li>
                             
                             <li><a href="#">
                                 <span class="glyphicon glyphicon-briefcase"></span> Egressos (em breve)</a>
