--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -67,7 +67,7 @@
                             </li>
 
                             <li><a href="{{ url_for('view_participations', initials=std.post_graduation.initials) }}">
-                                <span class="glyphicon glyphicon-globe"></span> Participações em Eventos</a>
+                                <span class="glyphicon glyphicon-globe"></span> Intercâmbios</a>
                             </li>
 
                             <li><a href="{{ url_for('view_final_reports', initials=std.post_graduation.initials) }}">
