--- a/MinervaEnv/Minerva/templates/participations_view.html
+++ b/MinervaEnv/Minerva/templates/participations_view.html
@@ -12,7 +12,7 @@
 
 <section>
     <header class="page-header">
-        <h2>&raquo Participações em Eventos</h2>
+        <h2>&raquo Intercâmbios</h2>
     </header>
 
     <p>
