#31 Partial resolution: add alt attr

--- a/MinervaEnv/Minerva/templates/staffs_view.html
+++ b/MinervaEnv/Minerva/templates/staffs_view.html
@@ -18,7 +18,7 @@
     {% for coordinator in board_of_staffs.coordination %}
     <div class="row">
         <div class="col-md-3">
-            <img src="{{ coordinator.photo }}" class="img-circle pull-right" height="190" width="180">
+            <img alt="Foto do(a) coordenador(a)" src="{{ coordinator.photo }}" class="img-circle pull-right" height="190" width="180">
         </div>
         <div class="col-md-9">
             <h3>{{ coordinator.name }}<br/>
