--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" type="text/css" href="/static/css/carousel.css" />
 <link rel="stylesheet" type="text/css" href="/static/css/schedule.css" />
-<link rel="stylesheet" type="text/css" href="/static/css/{{ std.post_graduation.initials }}.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/{{ std.post_graduation.initials.lower() }}.css"/>
 
 {% endblock %}
 
