--- a/MinervaEnv/Minerva/templates/students_view.html
+++ b/MinervaEnv/Minerva/templates/students_view.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="/static/css/ppgp.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/{{ std.post_graduation.initials.lower() }}.css"/>
 {% endblock %}
 
 {% block content %}
