#18 Hide main menu if there's no program and show back option for errors

--- a/MinervaEnv/Minerva/templates/500.html
+++ b/MinervaEnv/Minerva/templates/500.html
@@ -9,4 +9,8 @@
     o que você tentou fazer em qual horário e dia.
 </p>
 
+<p>
+    Tente <a onclick="window.history.go(-1); return false;" href="#">voltar à página anterior</a>.
+</p>
+
 {% endblock %}
