--- a/MinervaEnv/Minerva/templates/501.html
+++ b/MinervaEnv/Minerva/templates/501.html
@@ -9,4 +9,8 @@
     administradores do sistema caso esse erro persista por muito tempo.
 </p>
 
+<p>
+    Tente <a onclick="window.history.go(-1); return false;" href="#">voltar à página anterior</a>.
+</p>
+
 {% endblock %}
