--- a/MinervaEnv/Minerva/templates/503.html
+++ b/MinervaEnv/Minerva/templates/503.html
@@ -9,4 +9,8 @@
     bem para você acessar.
 </p>
 
+<p>
+    Tente <a onclick="window.history.go(-1); return false;" href="#">voltar à página anterior</a>.
+</p>
+
 {% endblock %}
