--- a/MinervaEnv/Minerva/templates/404.html
+++ b/MinervaEnv/Minerva/templates/404.html
@@ -7,4 +7,9 @@
     Desculpe, mas o URL que você tentou acessar não está aqui. =(
 </p>
 
+<p>
+    Você pode <a onclick="window.history.go(-1); return false;" href="#">voltar à página anterior</a>
+    ou abrir a opção de <strong>Mais Pós-Graduações</strong> no menu principal acima.
+</p>
+
 {% endblock %}
