#21 Add popup for ccsa tech page

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -29,7 +29,7 @@
 
 <p>
     Mais livres produções técnicas do CCSA:
-    &lt;<a href="https://ccsa-ufrn.github.io/">https://ccsa-ufrn.github.io/</a>&gt;
+    &lt;<a href="https://ccsa-ufrn.github.io/" target="_blank">https://ccsa-ufrn.github.io/</a>&gt;
 </p>
 
 {% endblock %}
