--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -67,7 +67,9 @@
                         <li><a href="">Documentos</a></li>
                     </ul>
                 </div>
-                {% block content %}{% endblock %}
+                <div class="content">
+                    {% block content %}{% endblock %}
+                </div>
         </div>
         <hr/>
     </div>
